# LibraryPyApi

./: .env  .gitignore  .gitlab-ci.yml  Dockerfile  docker-compose.yml  main.py  pyproject.toml
app/auth/models/: user.py
app/auth/repositories/: user_repository.py
app/auth/routers/: auth_router.py
app/auth/schemas/: user.py
app/auth/services/: auth_service.py
app/auth/utils/: dependencies.py  security.py
app/books/models/: __init__.py  author.py  book.py  book_author.py  book_cover.py  book_subject.py  showcase.py
app/books/models/DTO/: author_short.py  book_details.py  book_short.py
app/books/repositories/: author_repository.py  book_repository.py  showcase_repository.py
app/books/routers/: author_router.py  book_router.py  showcase_router.py
app/books/schemas/: author.py  book.py  cover.py  showcase.py  subject.py
app/books/services/: author_service.py  book_service.py  showcase_service.py
app/config/: conf.py
app/customers/models/: customer.py
app/customers/repositories/: customer_repository.py
app/customers/routers/: customer_router.py
app/customers/schemas/: customer.py
app/customers/services/: customer_service.py
app/database/: db.py
app/queries/: orm.py
app/reports/models/: __init__.py  customer.py  issue.py
app/reports/repositories/: customer_repository.py  issue_repository.py  reports_repository.py
app/reports/routers/: customer_router.py  issue_router.py  reports_router.py
app/reports/schemas/: customer.py  issue.py  reports.py
app/reports/services/: customer_service.py  issue_service.py  reports_service.py
