[tool.poetry]
name = "goods-api"
version = "0.1.0"
description = ""
authors = ["Timofey <dziamidau@fenion.at>"]
readme = "README.md"
packages = [{include = "goods_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.40"
sqlmodel = "^0.0.24"
asyncpg = "^0.30.0"
uvicorn = "^0.34.0"
greenlet = "^3.1.1"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
pydantic = "^2.12.4"
email-validator = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
